@@ -402,6 +402,12 @@
   (let ((fdefn (find-fdefn name)))
     (and fdefn (fdefn-fun fdefn) t)))
 
+;; Byte index 2 of the fdefn's header is the statically-linked flag
+#!+immobile-code
+(defmacro sb!vm::fdefn-has-static-callers (fdefn)
+  `(sap-ref-8 (int-sap (get-lisp-obj-address ,fdefn))
+              (- 2 sb!vm::other-pointer-lowtag)))
+
 (defun fmakunbound (name)
   "Make NAME have no global function definition."
   (declare (explicit-check))
@@ -409,6 +415,9 @@
       (:symbol name "removing the function or macro definition of ~A")
     (let ((fdefn (find-fdefn name)))
       (when fdefn
+        #!+immobile-code
+        (unless (eql (sb!vm::fdefn-has-static-callers fdefn) 0)
+          (sb!vm::remove-static-links fdefn))
         (fdefn-makunbound fdefn)))
     (undefine-fun-name name)
     name))
