@@ -361,6 +361,7 @@
 ;;;;
 
 #!+immobile-code
+(progn
 (defun sb!vm::collect-immobile-code-relocs ()
   (let ((code-components
          (make-array 20000 :element-type '(unsigned-byte 32)
@@ -448,3 +449,120 @@
     (vector-push-extend 0 code-components)
     (vector-push-extend (fill-pointer relocs) code-components)
     (values code-components relocs)))
+
+(defmacro do-immobile-functions ((code-var fun-var addr-var &key (if t)) &body body)
+  ;; Loop over all code objects
+  `(let ((call (find-inst #xE8 (get-inst-space)))
+         (jmp  (find-inst #xE9 (get-inst-space)))
+         (dstate (make-dstate))
+         (seg (sb!disassem::%make-segment :sap-maker #'error)))
+     (sb!vm::map-objects-in-range
+      (lambda (,code-var obj-type obj-size)
+        (declare (ignore obj-size))
+        (when (and (= obj-type code-header-widetag) ,if)
+          ;; Loop over all embedded functions
+          (dotimes (fun-index (code-n-entries ,code-var))
+            (let* ((,fun-var (%code-entry-point ,code-var fun-index))
+                   (,addr-var (+ (get-lisp-obj-address ,fun-var)
+                                 (- fun-pointer-lowtag)
+                                 (ash simple-fun-code-offset word-shift))))
+              (setf (seg-virtual-location seg) ,addr-var
+                    (seg-length seg)
+                    (- (let ((next (%code-entry-point ,code-var (1+ fun-index))))
+                         (if next
+                             (- (get-lisp-obj-address next) fun-pointer-lowtag)
+                             (+ (sap-int (code-instructions ,code-var))
+                                (%code-code-size ,code-var))))
+                       ,addr-var)
+                    (seg-sap-maker seg) (constantly (int-sap ,addr-var)))
+              ,@body))))
+      ;; Slowness here is bothersome, especially for SB!VM::REMOVE-STATIC-LINKS,
+      ;; so skip right over all fixedobj pages.
+      (ash (+ immobile-space-start immobile-fixedobj-subspace-size)
+           (- n-fixnum-tag-bits))
+      *immobile-space-free-pointer*)))
+
+(defun sb!vm::statically-link-core (&key callers exclude-callers
+                                         callees exclude-callees
+                                         verbose)
+  (flet ((match-p (name include exclude)
+           (and (not (member name exclude :test 'equal))
+                (or (not include) (member name include :test 'equal)))))
+    (do-immobile-functions (code fun addr)
+      (when (match-p (%simple-fun-name fun) callers exclude-callers)
+        (let ((printed-fun-name nil))
+          ;; Loop over function's assembly code
+          (map-segment-instructions
+           (lambda (chunk inst)
+             (when (or (eq inst jmp) (eq inst call))
+               (let ((fdefn (sb!vm::find-called-object
+                             (+ (near-jump-displacement chunk dstate)
+                                (dstate-next-addr dstate)))))
+                 ;; It's possible that this could be extended to handle
+                 ;; calling a generic function. But the overhead of GFs
+                 ;; is so absurdly high in comparison to one extra jump
+                 ;; that it scarcely matters. Additionally, static-ness
+                 ;; is not relevant since GFs can always be mutated.
+                 (when (and (fdefn-p fdefn)
+                            (let ((callee (fdefn-fun fdefn)))
+                              (and (simple-fun-p callee)
+                                   (sb!kernel::immobile-space-obj-p callee)
+                                   (match-p (%simple-fun-name callee)
+                                            callees exclude-callees))))
+                   (let ((entry (sb!vm::fdefn-call-target fdefn)))
+                     (when verbose
+                       (unless printed-fun-name
+                         (format t "#x~X ~S~%" (get-lisp-obj-address fun) fun)
+                         (setq printed-fun-name t))
+                       (format t "  @~x -> ~s [~x]~%"
+                               (dstate-cur-addr dstate) (fdefn-name fdefn) entry))
+                     ;; Set the statically-linked flag
+                     (setf (sb!vm::fdefn-has-static-callers fdefn) 1)
+                     ;; Change the machine instruction
+                     (setf (signed-sap-ref-32 (int-sap (dstate-cur-addr dstate)) 1)
+                           (- entry (dstate-next-addr dstate))))))))
+           seg dstate))))))
+
+;;; While concurrent use of un-statically-link is unlikely, misuse could easily
+;;; cause heap corruption. It's preventable by ensuring that this is atomic
+;;; with respect to GC and other code attempting to change the same fdefn.
+;;; The issue is that if the fdefn loses the pointer to the underlying code
+;;; via (setf fdefn-fun) before we were done removing the static links,
+;;; then there could be no remaining pointers visible to GC.
+;;; The only way to detect the current set of references is to find uses of the
+;;; current jump address, which means we need to fix them *all* before anyone
+;;; else gets an opportunity to change the fdefn-fun of this same fdefn again.
+(defglobal *static-linker-lock* (sb!thread:make-mutex :name "static linker"))
+(defun sb!vm::remove-static-links (fdefn)
+  ; (warn "undoing static linkage of ~S" (fdefn-name fdefn))
+  (sb!thread::with-system-mutex (*static-linker-lock* :without-gcing t)
+    ;; If the jump is to FUN-ENTRY, change it back to FDEFN-ENTRY
+    (let ((fun-entry (sb!vm::fdefn-call-target fdefn))
+          (fdefn-entry (+ (get-lisp-obj-address fdefn)
+                          (ash fdefn-raw-addr-slot word-shift)
+                          (- other-pointer-lowtag))))
+      ;; Examine only those code components which potentially use FDEFN.
+      (do-immobile-functions
+         (code fun addr :if (loop for i downfrom (1- (sb!kernel:code-header-words code))
+                                  to sb!vm:code-constants-offset
+                                  thereis (eq (sb!kernel:code-header-ref code i)
+                                              fdefn)))
+        (map-segment-instructions
+         (lambda (chunk inst)
+           (when (or (eq inst jmp) (eq inst call))
+             ;; TRULY-THE because near-jump-displacement isn't a known fun.
+             (let ((disp (truly-the (signed-byte 32)
+                                    (near-jump-displacement chunk dstate))))
+               (when (= fun-entry (+ disp (dstate-next-addr dstate)))
+                 (let ((new-disp
+                        (the (signed-byte 32)
+                             (- fdefn-entry (dstate-next-addr dstate)))))
+                   ;; CMPXCHG is atomic even when misaligned, and x86-64 promises
+                   ;; that self-modifying code works correctly, so the fetcher
+                   ;; should never see a torn write.
+                   (%primitive sb!vm::signed-sap-cas-32
+                               (int-sap (dstate-cur-addr dstate))
+                               1 disp new-disp))))))
+         seg dstate)))
+    (setf (sb!vm::fdefn-has-static-callers fdefn) 0))) ; Clear static link flag
+) ; end PROGN
